# Mathzy

./: .gitignore  CMakeLists.txt
include/: Mathzy.h
src/: Mathzy.cpp
